oh iamge paths i got you now ok

--- a/docs/_includes/single-image.html
+++ b/docs/_includes/single-image.html
@@ -1,1 +1,1 @@
-<img class="full-width" src="/assets/images/{{ include.fileName }}" />
+<img class="full-width" src="../../../../assets/images/{{ include.fileName }}" />
