--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
 
 {% if page.previous.url %}
   <section class="next">
-    <a class="next__link" href="{{page.previous.url | prepend: site.baseurl }}" style="background-image: url('{{ site.url }}/assets/images/{{ page.previous.image }}');">
+    <a class="next__link" href="{{page.previous.url | prepend: site.baseurl }}" style="background-image: url('../../../../assets/images/{{ page.previous.image }}');">
       <div class="next__container">
         <span>Read Next</span>
         <h2>{{page.previous.title}}</h2>
