more image path

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -31,7 +31,7 @@ layout: default
   <section class="profile">
     <div class="profile__card">
       <div class="profile__img">
-        <figure class="absolute-bg" style="background-image: url('{{ site.url }}/assets/images/{{ site.data.authors.[page.author].author-image }}');"></figure>
+        <figure class="absolute-bg" style="background-image: url('../../../../assets/images/{{ site.data.authors.[page.author].author-image }}');"></figure>
       </div>
       <div class="profile__container">
         <h3>{{ site.data.authors.[page.author].name }}</h3>
