Home URL thing fixed

--- a/docs/_includes/category.html
+++ b/docs/_includes/category.html
@@ -1,6 +1,6 @@
 <section class="previews">
   <div>
-    <a class="nav nav--white" href="{{ site.url }}">
+    <a class="nav nav--white" href="{{ site.baseurl }}">
       <i class="fa fa-lg fa-arrow-left"></i>
       <span>Back to Blog</span>
     </a>
