Some better text for the about page.

--- a/docs/_includes/about-tab.html
+++ b/docs/_includes/about-tab.html
@@ -2,28 +2,14 @@
   <div class="preview__link">
   <h1>About this blog</h1>
 
-  <p> Bela is a thing blah blah. Give us money blah blah.</p>
- <!--  <ul class="cards">
+  <p> [Bela](http://bela.io) is the platform for ultra-low latency audio and sensor processing. Bela was initially funded on [Kickstarter](http://bit.do/belaKickstarter) in April 2016, and has been growing ever since.</p>
 
-      {% assign cat_name = category | first %}
-      <li class="card">
-        <a class="card__link" href="{{ site.baseurl }}/category/{{ category | first | downcase | slugify }}/">
-          {% for post in site.categories[cat_name] limit: 1 %}
-            <div class="card__img">
-                <figure class="absolute-bg" style="background-image: url('{{ site.url }}/assets/images/{{ site.categories[cat_name].cat-image }}');"></figure>
-              
-            </div>
-          {% endfor %}
-          <div class="card__container">
-            <h2 class="card__header">{{ cat_name }}</h2>
-            <p class="card__count">{{ site.categories[cat_name] | size }} Posts</p>
-            <span class="card__more">View All</span>
-          </div>
-        </a>
-      </li>
-    
-  </ul> -->
-  
+  <p>This blog is for longer and more in-depth information about Bela projects and features. For support and to join our worldwide community, please visit the [Bela forum](http://forum.bela.io) where you can join the conversation!</p>
+
+  <p>Bela is a project of Augmented Instruments Ltd. Please follow us on [Twitter](http://twitter.com/belaProject) and [Facebook](http://www.facebook.com/belaProject), and see all of our code, tutorials and examples on [Github](http://github.com/belaProject).</p>
+ 
+
+
   </div>
   {% include archive-link.html %}
 </div>
