--- a/docs/_includes/about-tab.html
+++ b/docs/_includes/about-tab.html
@@ -2,11 +2,11 @@
   <div class="preview__link">
   <h1>About this blog</h1>
 
-  <p> [Bela](http://bela.io) is the platform for ultra-low latency audio and sensor processing. Bela was initially funded on [Kickstarter](http://bit.do/belaKickstarter) in April 2016, and has been growing ever since.</p>
+  <p><a href="http://bela.io">Bela</a> is the platform for ultra-low latency audio and sensor processing. Bela was initially funded on <a href="http://bit.do/belaKickstarter">Kickstarter</a> in April 2016, and has been growing ever since.</p>
 
-  <p>This blog is for longer and more in-depth information about Bela projects and features. For support and to join our worldwide community, please visit the [Bela forum](http://forum.bela.io) where you can join the conversation!</p>
+  <p>This blog is for longer and more in-depth information about Bela projects and features. For support and to join our worldwide community, please visit the <a href="http://forum.bela.io">Bela forum</a> where you can join the conversation!</p>
 
-  <p>Bela is a project of Augmented Instruments Ltd. Please follow us on [Twitter](http://twitter.com/belaProject) and [Facebook](http://www.facebook.com/belaProject), and see all of our code, tutorials and examples on [Github](http://github.com/belaProject).</p>
+  <p>Bela is a project of Augmented Instruments Ltd, and was built by members of the Augmented Instruments Lab within the Centre for Digital Music, Queen Mary University of London. Please follow us on <a href="http://twitter.com/belaProject">Twitter</a> and <a href="http://www.facebook.com/belaProject">Facebook</a>, and see all of our code, tutorials and examples on <a href="http://github.com/belaProject">Github</a>.</p>
  
 
 
