--- a/docs/_sass/_components.scss
+++ b/docs/_sass/_components.scss
@@ -464,6 +464,7 @@
   &__social {
     display: flex;
     justify-content: flex-end;
+    border: none;
 
     & > *:not(:last-child) {
       margin-right: 1em;
