This better addresses the h1 issues

--- a/docs/_sass/_base.scss
+++ b/docs/_sass/_base.scss
@@ -66,14 +66,14 @@ h1, h2 {
 }
 
 h1 {
-  $fontSize: 2.6em;
+  $fontSize: 2.2em;
 
   @media (min-width: $mq-md) {
     font-size: 1.9em;
   }
 
   @media (min-width: $mq-xl) {
-    font-size: $fontSize + 0.5em;
+    font-size: $fontSize;
   }
 }
 
