--- a/docs/_sass/_components.scss
+++ b/docs/_sass/_components.scss
@@ -380,9 +380,16 @@
     width: 55%;
   }
 
+  strong,
+  b {
+    font-weight: bold;
+  }
+
   h1, 
   h2 {
     line-height: 1.2;
+    margin-bottom: 15px;
+    margin-top: 30px;
   }
 
   p:first-child {
