Added functionality for image captions.

--- a/docs/_includes/single-image.html
+++ b/docs/_includes/single-image.html
@@ -1,1 +1,4 @@
-<img class="full-width" src="../../../../assets/images/{{ include.fileName }}" />
+<div class="image-include">
+	<img class="full-width" src="../../../../assets/images/{{ include.fileName }}" />
+	<p class="image-caption">{{ include.caption }}</p>
+</div>
