--- a/docs/_sass/_mixins.scss
+++ b/docs/_sass/_mixins.scss
@@ -1,7 +1,7 @@
 /**
  * Underline Slide from left and back
  */
-@mixin border-slide($mainColor: $color-black, $borderColor: $color-alpha, $height: 3px) {
+@mixin border-slide($mainColor: $color-black, $borderColor: $teal-main, $height: 3px) {
   position: relative;
 
   color: $mainColor;
@@ -36,8 +36,8 @@
 
   font-family: $font-header;
   color: $color-alpha;
-  border: $border solid $color-alpha;
-  box-shadow: inset 0 0 0 0 $color-alpha;
+  border: $border solid rgba($teal-main, 0.7);
+  box-shadow: inset 0 0 0 0 rgba($teal-main, 0.7);
   transition: all 0.4s ease-in-out;
 }
 
