--- a/docs/_sass/_mixins.scss
+++ b/docs/_sass/_mixins.scss
@@ -41,6 +41,19 @@
   transition: all 0.4s ease-in-out;
 }
 
+@mixin card-button-slide($pad: 0.5em, $border: 3px) {
+  @extend %letter-spacing;
+
+  display: inline-block;
+  padding: $pad;
+
+  font-family: $font-header;
+  color: $color-alpha;
+  border: $border solid rgba($teal-base, 0.7);
+  box-shadow: inset 0 0 0 0 rgba($teal-base, 0.7);
+  transition: all 0.4s ease-in-out;
+}
+
 /**
  * Flex Grid
  */
