--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -8,23 +8,23 @@ body {
 /**
  * Table
  */
-table {
-  border: 1px solid black;
-  font-size: 80%;
-  margin-bottom: 15px;
-}
+// table {
+//   border: 1px solid black;
+//   font-size: 80%;
+//   margin-bottom: 15px;
+// }
 
-th {
-  border: 1px solid black;
-  padding: 15px;
-  text-align: left;
-}
+// th {
+//   border: 1px solid black;
+//   padding: 15px;
+//   text-align: left;
+// }
 
-td {
-  border: 1px solid black;
-  padding: 15px;
-  text-align: left;
-}
+// td {
+//   border: 1px solid black;
+//   padding: 15px;
+//   text-align: left;
+// }
 
 
 /**
