--- a/docs/_sass/_base.scss
+++ b/docs/_sass/_base.scss
@@ -15,7 +15,7 @@ $color-black: #0a0a0a;
 $color-grey: #f8f9f9;
 $color-white: #fff;
 $color-link: #6fc475;
-$color-linkActive: #aaa;
+$color-linkActive: $teal-01;
 
 $mq-xs: 20em;
 $mq-sm: 30em;
