Removes lines starting with # from preview.

--- a/docs/_includes/about_content.html
+++ b/docs/_includes/about_content.html
@@ -28,7 +28,7 @@
             <a class="preview__link" href="{{ post.url | prepend: site.baseurl }}" itemprop="url">
               <span class="preview__date" itemprop="datePublished" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %-d, %Y" }}</span>
               <h2 class="preview__header" itemprop="name">{{ post.title }}</h2>
-              <p class="preview__excerpt" itemprop="description">{{ post.content | strip_html | truncatewords: 30 }}</p>
+              <p class="preview__excerpt" itemprop="description">{{ post.content | strip_html | replace_regex: '#.*', '' | truncatewords: 30 }}</p>
               <span class="preview__more">Read More</span>
             </a>
           </li>
