--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
         <p>{{ site.data.authors.[page.author].profile }}</p>
         {% if site.data.authors.[page.author].email or site.data.authors.[page.author].social %}
           <ul class="profile__social">
-              <li><a class="fa fa-lg fa-envelope-o" href="mailto:{{ site.data.authors.[page.author].email }}"></a></li>
+              <li><a class="fa fa-lg fa-envelope" href="mailto:{{ site.data.authors.[page.author].email }}"></a></li>
               <li><a class="fa fa-lg fa-github" href="http://www.github.com/{{ site.data.authors.[page.author].github }}" target="_blank"></a></li>
               <li><a class="fa fa-lg fa-twitter" href="http://www.twitter.com/{{ site.data.authors.[page.author].twitter }}" target="_blank"></a></li>
             
