--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -20,7 +20,7 @@
   <meta name="twitter:site" content="{{ site.title }}">
   <meta name="twitter:creator" content="@{{ site.twitter_username }}">
   <meta name="twitter:domain" content="{{ site.url }}">
-  <meta property="twitter:image" content="{% if page.image %}{{ page.image }}{% else %}{{ site.default_img }}{% endif %}">
+  <meta property="twitter:image" content="{% if page.image %}{{ '/assets/images/' | prepend: site.baseurl| append: page.image }}{% else %}{{ site.default_img }}{% endif %}">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata|Space+Mono:700">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300" rel="stylesheet">
