--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -17,8 +17,8 @@
   <meta name="twitter:description" content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description }}{% endif %}">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title | escape }} | {{ site.title }}{% else %}{{ site.title | escape }}{% endif %}">
   <meta name="twitter:url" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}">
-  <meta name="twitter:site" content="{{ site.title }}">
-  <meta name="twitter:creator" content="@{{ site.twitter_username }}">
+  <meta name="twitter:site" content="@{{ site.twitter_username }}">
+  <meta name="twitter:creator" content="@{{site.data.authors.[page.author].twitter}}">
   <meta name="twitter:domain" content="{{ site.url }}">
   <meta property="twitter:image" content="{% if page.image %}{{ '/assets/images/' | prepend: site.baseurl| append: page.image }}{% else %}{{ site.default_img }}{% endif %}">
 
