Revert "Allow multiple authors per post. Closes #17."
This reverts commit 7f159c441a8a66db84714a68508ebd161cb985be.

If there is a use case for multiple authors at some point in the future,
the solution won't be just stacking cards on top of one another at the
bottom of the post; it takes up too much room for the amount of
information it conveys.

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -28,16 +28,15 @@ layout: default
     {{ content }}
   </section>
 
-{% for author in page.author %}
   <section class="profile">
     <div class="profile__card">
       <div class="profile__img">
-        <figure class="absolute-bg" style="background-image: url('../../../../assets/images/{{ site.data.authors.[author].author-image }}');"></figure>
+        <figure class="absolute-bg" style="background-image: url('../../../../assets/images/{{ site.data.authors.[page.author].author-image }}');"></figure>
       </div>
       <div class="profile__container">
-        <h3>{{ site.data.authors.[author].name }}</h3>
-        <p>{{ site.data.authors.[author].profile }}</p>
-        {% if site.data.authors.[author].email or site.data.authors.[author].social %}
+        <h3>{{ site.data.authors.[page.author].name }}</h3>
+        <p>{{ site.data.authors.[page.author].profile }}</p>
+        {% if site.data.authors.[page.author].email or site.data.authors.[page.author].social %}
           <ul class="profile__social">
               <li><a class="fa fa-lg fa-envelope" href="mailto:{{ site.data.authors.[page.author].email }}"></a></li>
               <li><a class="fa fa-lg fa-github" href="http://www.github.com/{{ site.data.authors.[page.author].github }}" target="_blank"></a></li>
@@ -46,10 +45,8 @@ layout: default
           </ul>
         {% endif %}
       </div>
-
     </div>
   </section>
-{% endfor %}
 
 </article>
 
