Added fuctionality for link. Needs if statement to check for author fields.

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -41,6 +41,7 @@ layout: default
               <li><a class="fa fa-lg fa-envelope" href="mailto:{{ site.data.authors.[page.author].email }}"></a></li>
               <li><a class="fa fa-lg fa-github" href="http://www.github.com/{{ site.data.authors.[page.author].github }}" target="_blank"></a></li>
               <li><a class="fa fa-lg fa-twitter" href="http://www.twitter.com/{{ site.data.authors.[page.author].twitter }}" target="_blank"></a></li>
+              <!-- <li><a class="fa fa-lg fa-link" href="{{ site.data.authors.[page.author].link }}" target="_blank"></a></li> -->
             
           </ul>
         {% endif %}
