--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+	
+  <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico?" >
+  
   {% include head.html %}
 
   <body>
