--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:description" content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:image" content="{{ site.baseurl }}/{% if page.image %}{{ page.image }}{% else %}{{ site.default_img }}{% endif %}">
+  <meta property="og:image" content="{{ site.baseurl }}/assets/images/{% if page.image %}{{ page.image }}{% else %}{{ site.default_img }}{% endif %}">
   <meta property="og:type" content="blog">
 
   <meta name="twitter:card" content="summary_large_image">
