--- a/docs/_includes/youtube.html
+++ b/docs/_includes/youtube.html
@@ -1,5 +1,5 @@
 <div class="video">
     <figure>
-        <iframe width="640" height="480" src="//www.youtube.com/embed/{{ include.youtube }}" frameborder="0" allowfullscreen></iframe>
+        <iframe width="640" height="480" src="//www.youtube.com/embed/{{ include.youtube }}&rel=0" frameborder="0" allowfullscreen></iframe>
     </figure>
 </div>
