gutter between images in double-image using flex - to be implemented if it doesn't break anything else

--- a/docs/_includes/double-image.html
+++ b/docs/_includes/double-image.html
@@ -1,10 +1,10 @@
 <div class="image-include">
-	<div class="row">
-	  <div class="column-2">
+	<div class="row" style="display:flex;justify-content:space-between">
+	  <div class="column-2" style="width:48%">
 	  	   <img src="../../../../assets/images/{{ include.left }}" />
 	  </div>
 
-	  <div class="column-2">
+	  <div class="column-2" style="width:48%">
   			<img src="../../../../assets/images/{{ include.right }}" />
 	  </div>
 	  <p class="image-caption">{{ include.caption }}</p>
