Bela and Csound post live.

--- a/docs/_sass/_components.scss
+++ b/docs/_sass/_components.scss
@@ -383,6 +383,11 @@
   font-size: 0.93em;
   line-height: 2em;
 
+  pre {
+    line-height: 1.1em;
+    font-size: 0.9em;
+  }
+
   @media (min-width: $mq-md) {
     width: 55%;
   }
