Fixed that Liquid layout error that was causing insane and verbose command line warnings.

--- a/docs/_sass/_helpers.scss
+++ b/docs/_sass/_helpers.scss
@@ -24,3 +24,21 @@
 .bg-white {
   background-color: $color-white;
 }
+
+/** 
+ * Front page layout helpers
+ */
+
+.prev-left {
+
+  >img {
+    width: 95%;
+    height: auto;
+  }
+  margin-bottom: 1em;
+}
+
+.prev-right {
+}
+
+
