--- a/docs/_sass/_components.scss
+++ b/docs/_sass/_components.scss
@@ -20,6 +20,11 @@
   }
   
   &__item {
+    >a {
+        text-decoration: none;
+        border: 0;
+        color: #0a0a0a;
+      }
     cursor: pointer;
 
     &:not(.active) {
