Fixed annoying styling and colour choices on the footer links to social and main site. Fixed font on main site link. Added insta link.

--- a/docs/_includes/archive-link.html
+++ b/docs/_includes/archive-link.html
@@ -1,9 +1,10 @@
 <footer class="section-padding--sm footer">
   <a class="footer__archive" href="{{ site.baseurl }}/archive/">Archive</a>
   <ul class="footer__social">
-      <li><a class="fa fa-lg fa-github" href="http://github.com/belaPlatform" target="_blank"></a></li>
-      <li><a class="fa fa-lg fa-twitter" href="http://www.twitter.com/belaPlatform" target="_blank"></a></li>
-      <li><a class="fa fa-lg fa-facebook" href="http://www.facebook.com/belaPlatform" target="_blank"></a></li>
-      <li><a href="http://bela.io" target="_blank">bela.io</a></li>
+      <li><a class="link fa fa-lg fa-instagram" href="http://www.instagram.com/belaPlatform" target="_blank"></a></li>
+      <li><a class="link fa fa-lg fa-twitter" href="http://www.twitter.com/belaPlatform" target="_blank"></a></li>
+      <li><a class="link fa fa-lg fa-facebook-square" href="http://www.facebook.com/belaPlatform" target="_blank"></a></li>
+      <li><a class="link fa fa-lg fa-github" href="http://github.com/belaPlatform" target="_blank"></a></li>
+      <li><a class="footer__archive" href="http://bela.io" target="_blank">bela.io</a></li>
   </ul>
 </footer>
