review of 2019 post put live

--- a/docs/_includes/vimeo.html
+++ b/docs/_includes/vimeo.html
@@ -1,5 +1,6 @@
 <div class="video">
     <figure>
-        <iframe width="660" height="315" src="//player.vimeo.com/video/{{ include.vimeo }}?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
+        <iframe src="//player.vimeo.com/video/{{ include.vimeo }}?title=0&byline=0&portrait=0&transparent=0" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+
     </figure>
 </div>
