--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
       <h1 itemprop="name headline">{{ page.title }}</h1>
       {% if page.categories.size > 0 %}
         <span>
-                    Posted in 
+                    Posted in
           {% for cat in page.categories %}
           <a class="category_link" href="{{ site.baseurl }}/category/{{ cat | slugify }}">{{ cat }}</a>
           {% endfor %}
@@ -41,6 +41,7 @@ layout: default
               <li><a class="fa fa-lg fa-envelope" href="mailto:{{ site.data.authors[page.author].email }}"></a></li>
               <li><a class="fa fa-lg fa-github" href="http://www.github.com/{{ site.data.authors[page.author].github }}" target="_blank"></a></li>
               <li><a class="fa fa-lg fa-twitter" href="http://www.twitter.com/{{ site.data.authors[page.author].twitter }}" target="_blank"></a></li>
+              <li><a class="fa fa-lg fa-instagram" href="http://www.instagram.com/{{ site.data.authors[page.author].instagram }}" target="_blank"></a></li>
           </ul>
         {% endif %}
       </div>
