Yann Seznec Draft.

--- a/docs/_includes/youtube-2.html
+++ b/docs/_includes/youtube-2.html
@@ -1,12 +1,12 @@
 <div class="video">
-	<div class="row">
-	  <div class="column-2">
+	<div class="row" style="display:flex;justify-content:space-between">
+	  <div class="column-2" style="width:48%">
 	  	   <figure>
 	    		<iframe src="//www.youtube.com/embed/{{ include.left }}?rel=0" frameborder="0" allowfullscreen></iframe>
 	  	   </figure>
 	  </div>
 
-	  <div class="column-2">
+	  <div class="column-2" style="width:48%">
   		<figure>
 	    	<iframe src="//www.youtube.com/embed/{{ include.right }}?rel=0" frameborder="0" allowfullscreen></iframe>
 	    </figure>
