--- a/docs/_sass/_components.scss
+++ b/docs/_sass/_components.scss
@@ -18,7 +18,7 @@
     padding-left: 10em;
     padding-right: 10em;
   }
-  
+
   &__item {
     cursor: pointer;
 
@@ -70,7 +70,7 @@
 
 .preview {
   transition: background-color 0.2s ease-in-out;
-  
+
   &:nth-child(even) {
     background-color: $color-white;
   }
@@ -173,7 +173,7 @@
       &:after {
         // opacity: 0.5;
       }
-      
+
       .card__more {
         box-shadow: inset 175px 0 0 0 rgba($teal-base, 0.7);
         color: $color-white;
@@ -274,7 +274,7 @@
 
     & > *:not(:last-child) {
       margin-right: 1em;
-    }    
+    }
   }
 }
 
@@ -397,7 +397,7 @@
     font-weight: bold;
   }
 
-  h1, 
+  h1,
   h2 {
     line-height: 1.2em;
     margin-bottom: 15px;
@@ -597,6 +597,7 @@
     width: 100%;
     height: 100%;
     padding-bottom: 1em;
+    padding-top: 1em;
 }
 
 /* TEST For videos on two rows */
@@ -615,7 +616,8 @@
   display: block;
   > img {
     overflow: hidden;
-    padding-bottom: 5px;
+    padding-bottom: 0em;
+    padding-top: 1em;
   }
   .image-caption {
       padding: 0 0 30px;
