Jon blog post live.

--- a/docs/_sass/_components.scss
+++ b/docs/_sass/_components.scss
@@ -427,7 +427,7 @@
     padding-bottom: 0.75em;
     &.caption {
       font-size: 0.7em;
-      line-height: 1em;
+      line-height: 1.5em;
     }
   }
 
@@ -621,9 +621,9 @@
   }
   .image-caption {
       padding: 0 0 30px;
-      margin-top: 0;
+      margin-top: 10px;
       font-size: 0.7em;
-      line-height: 1em;
+      line-height: 1.5em;
   }
 }
 
