UVTOWER post live.

--- a/docs/_includes/youtube.html
+++ b/docs/_includes/youtube.html
@@ -2,4 +2,5 @@
     <figure>
         <iframe width="640" height="480" src="//www.youtube.com/embed/{{ include.youtube }}?rel=0" frameborder="0" allowfullscreen></iframe>
     </figure>
+	<p class="image-caption">{{ include.caption }}</p>
 </div>
