Added red and yellow accent colour definitions from the pattern library

--- a/docs/_sass/_color-scheme.scss
+++ b/docs/_sass/_color-scheme.scss
@@ -27,6 +27,9 @@ $grey-toolbar: #bcbcbc;
 
 $amber-accent: #f26d21;
 
+$accent-red: #ff5e5b;
+$accent-yellow: #fff07c;
+
 $header-color: rgba(0, 0, 0, 0.7);
 
 @mixin background-hue($color) {
